# hermes-home-agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  hermes-home-upgrade-plan-1.md
db/: schema.sql
deploy/: .env.production.example  compose.prod.yml
deploy/nginx/: Dockerfile  default.conf.template
deploy/systemd/: hermes-home.service
docs/: HERMES_AGENT_INTERFACE_REVIEW.md  HERMES_SERVER_INSTALL.md  PLAN.md  upgrade.md
mcp/: pyproject.toml
mcp/hermes_home_mcp/: __init__.py  server.py  vault.py
server/: Dockerfile  pyproject.toml
server/app/: __init__.py  connectors.py  db.py  embeddings.py  indexer.py  jobs.py  main.py  migrate_notes.py  models.py  sanitize.py  saved_items.py  scheduler.py  todo_provider.py  todoist.py  vault.py  vikunja.py
server/tests/: test_api.py  test_deployment_files.py  test_vault.py
skills/categorize-notes/: SKILL.md
skills/deliver-as-page/: SKILL.md  template.html
skills/keep-tiles-fresh/: SKILL.md
skills/manage-todos/: SKILL.md
skills/route-command/: SKILL.md
web/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: app.spec.ts
web/public/: manifest.webmanifest  sw.js
web/src/: api.test.ts  api.ts  approvals.ts  ask.ts  codex.test.ts  codex.ts  foryou.ts  history.test.ts  history.ts  icons.ts  jobs.test.ts  jobs.ts  main.ts  notes.test.ts  notes.ts  pages.test.ts  pages.ts  profiles.test.ts  profiles.ts  styles.css  surfaces.ts  test-setup.ts  tiles.test.ts  tiles.ts  toast.test.ts  todos.test.ts  todos.ts  ui.test.ts  (+1 more)
(+4 files in other folders)
