[project]
name = "hermes-home-mcp"
version = "0.1.0"
description = "MCP tool surface for Hermes Home"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.9",
]
postgres = [
  "psycopg[binary]>=3.2",
]

[project.scripts]
hermes-home-mcp = "hermes_home_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

