[project]
name = "hermes-home-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "nh3>=0.2",
  "httpx>=0.28",
  "python-frontmatter>=1.1",
  "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
